// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`notFollowedBy '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`notFollowedBy 'this' conditional success tests AST to match snapshot 1`] = `
{
  "name": "after",
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
  },
  "value": {
    "name": "before",
    "range": {
      "from": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "to": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
    },
    "value": "this",
  },
}
`;

exports[`notFollowedBy 'thisfoo' conditional success tests AST to match snapshot 1`] = `
{
  "name": "after",
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
  },
  "value": {
    "name": "before",
    "range": {
      "from": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "to": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
    },
    "value": "this",
  },
}
`;

exports[`notFollowedBy 'thisthat' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "not 'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`notFollowedBy 'that' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`notFollowedBy 'thatthis' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`notFollowedBy 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
